# CMakeList.txt : CMake project for SecureHashAlgorithm_SHA256, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SecureHashAlgorithm_SHA256 "SecureHashAlgorithm_SHA256.cpp" "SecureHashAlgorithm_SHA256.h" "main.cpp")

# TODO: Add tests and install targets if needed.
